@@ -42,6 +42,7 @@ Bug_2815_Regression_Test
 Bug_2820_Regression_Test
 Bug_2980_Regression_Test: !STATIC !Win32 !VxWorks !LynxOS !WCHAR
 Bug_3102_Regression_Test
+Bug_3319_Regression_Test
 CDR_Array_Test: !ACE_FOR_TAO
 CDR_File_Test: !ACE_FOR_TAO
 CDR_Test
