@@ -287,6 +287,13 @@ project(Bug_3102_Regression_Test) : acetest {
   }
 }
 
+project(Bug_3319_Regression_Test) : acetest {
+  exename = Bug_3319_Regression_Test
+  Source_Files {
+    Bug_3319_Regression_Test.cpp
+  }
+}
+
 project(Cache Map Manager Test) : acetest {
   exename = Cache_Map_Manager_Test
   Source_Files {
